# velqua

./: .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  VELQUA_MESH_BRIEF.md  build_exe.py  index.html  landing_page_copy.md  orchestrator.py  package-lock.json  package.json  pyproject.toml  run_velqua.bat  run_velqua.ps1  start.sh  test_velqua.sh  tsconfig.json
backend/: __init__.py  anamnesis_deps.toml  auto_learner.py  config.py  desktop.py  file_detector.py  keystore.py  license.py  logging_config.py  proxy.py  server.py  tray.py  updater.py  validators.py
docs/: architecture.md  mesh.md  providers.md
examples/: basic_memory.py  mesh_demo.py
packaging/: build_linux.py  build_macos.py  build_windows.py
src/: activity.js  api.js  app.js  index.html  mesh.js  styles.css  types.js
tasks/: velqua_mesh_v1.json
tests/: conftest.py  smoke_test.py  test_activity.py  test_activity_integration.py  test_auth.py  test_auto_learner.py  test_auto_learner_edge_cases.py  test_bulk_import.py  test_context_packing.py  test_decay.py  test_episodes.py  test_feedback.py  test_file_detector.py  test_hybrid_weights.py  test_injection_integration.py  test_integration.py  test_keystore.py  test_license.py  test_logging_config.py  test_memory_injection.py  test_mesh.py  test_mesh_integration.py  test_mmr.py  test_performance.py  test_provider_fallback_logic.py  test_providers.py  test_proxy.py  test_proxy_error_paths.py  test_relationships.py  test_reranker.py  test_retrieval_pipeline.py  test_server_api.py  test_shared.py  test_smart_dedup.py  test_strategy.py  test_synonyms.py  test_updater.py  (+1 more)
(+149 files in other folders)
